--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     padding: 0; 
     box-sizing: border-box; 
     font-family: 'Pretendard-M';
+    word-break: keep-all;
 }
 ul, li {
     list-style: none;
