--- a/src/routes/css/About.css
+++ b/src/routes/css/About.css
@@ -1,5 +1,5 @@
 .container-about > .section-1 {
-    width: 100%;
+    width: 94%;
     max-width: 720px;
     margin: 0 auto;
 }
@@ -7,7 +7,7 @@
     text-align: center;
     font-size: 18px;
     line-height: 30px;
-    padding-top: 30px;
+    padding: 30px 10px 0px 10px;
 }
 .container-about > .section-1 > table {
     width: 100%;
@@ -71,6 +71,10 @@
     font-size: 1.1rem;
 }
 
+.container-about > .section-3 {
+    width: 94%;
+    margin: 0 auto;
+}
 .container-about > .section-3 > .content {
     text-align: center;
 }
@@ -118,5 +122,22 @@
     .container-about > .section-3 > .content > .bottom {
         font-size: 1.2rem;
         line-height: 1.8rem;
+    }
+}
+@media screen and (max-width: 540px) {
+    .container-about > .section-1 > .content {
+        padding: 20px 10px 0px 10px;
+    }
+    .container-about > .section-1 > .content > p,
+    .container-about > .section-2 > .content > .top > p,
+    .container-about > .section-3 > .content > .top > p {
+        display: inline;
+        padding-right: 4px;
+    }
+    .container-about > .section-1 > table th {
+        padding: 10px;
+    }
+    .container-about > .section-1 > table td {
+        padding: 10px;
     }
 }
