--- a/src/routes/css/Ceo.css
+++ b/src/routes/css/Ceo.css
@@ -1,41 +1,49 @@
-.career {
+.container-ceo {
+    padding-top: 70px;
+}
+.container-ceo > .career {
     display: flex;
     width: 96%;
     max-width: 1080px;
     height: 640px;
     margin: 50px auto;
 }
-.career > .text {
+.container-ceo > .career > .text {
     width: 55%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 30px;
 }
-.career > .text > p {
+.container-ceo > .career > .text > p {
     padding: 14px 0px;
     border-bottom: 1px solid #eee;
 }
-.career > .img {
+.container-ceo > .career > .img {
     width: 45%;
     height: 100%;
     background: url('../../asset/img/photos/ceo.jpg') center center/cover;
 }
 
 @media screen and (max-width: 1000px) {
-    .career {
+    .container-ceo > .career {
         flex-direction: column-reverse;
         height: auto;
     }
-    .career > .text {
+    .container-ceo > .career > .text {
         width: 100%;
         padding: 20px;
     }
-    .career > .text > p {
+    .container-ceo > .career > .text > p {
         padding: 10px 0px;
     }
-    .career > .img {
+    .container-ceo > .career > .img {
         width: 100%;
         height: 100vw;
+    }
+}
+@media screen and (max-width: 540px) {
+    .container-ceo > .career {
+        margin: 30px auto;
     }
 }
