--- a/src/routes/css/Momo.css
+++ b/src/routes/css/Momo.css
@@ -64,3 +64,14 @@
         width: 100%;
     }
 }
+@media (max-width: 540px) {
+    .container-momo > .section-2 .title > p {
+        font-size: 1.8rem;
+        padding-top: 50px;
+    }
+    .container-momo > .section-2 .content {
+        font-size: 1rem;
+        line-height: 1.6rem;
+        padding: 20px 0px 20px 0px;
+    }
+}
