--- a/src/routes/css/Service.css
+++ b/src/routes/css/Service.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 300px;
+    padding: 60px 0px;
     background-color: #bad8ff;
 }
 .container-service > .intro > .text {
@@ -88,7 +88,7 @@
 
 @media screen and (max-width: 768px) {
     .container-service > .intro {
-        height: 200px;
+        padding: 20px 0px;
     }
     .container-service > .intro > .text > p:nth-child(1) {
         font-size: 20px;
@@ -106,13 +106,21 @@
         font-size: 20px;
         padding: 10px 24px;
     }
-
+    
     .container-service > .content > .item > .sub-title {
         font-size: 16px;
     }
-
+    
     .container-service > .content > .item > .img-container {
         flex-direction: column;
         height: 180vw;
+    }
+}
+@media screen and (max-width: 540px) {
+    .container-service {
+        padding: 60px 0px 0px 0px;
+    }
+    .container-service > .intro {
+        padding: 0px;
     }
 }
