--- a/src/routes/css/Main.css
+++ b/src/routes/css/Main.css
@@ -21,7 +21,7 @@
     }
 }
 .main-container {
-    padding: 70px 30px 140px 30px;
+    padding: 70px 0px 0px 0px;
 }
 .main-text {
     position: relative;
@@ -114,6 +114,7 @@
     }
     .sub-text {
         font-size: 16px;
+        padding: 0px 20px;
     }
     .sub-text > p:nth-last-child(1) {
         font-size: 14px;
@@ -138,7 +139,7 @@
 }
 @media screen and (max-width: 540px) {
     .main-container {
-        padding: 70px 20px 30px 20px;
+        padding: 70px 0px 30px 0px;
     }
     .main-text p {
         font-size: 20vw;
