--- a/src/routes/css/Business.css
+++ b/src/routes/css/Business.css
@@ -1,9 +1,101 @@
 .container-business {
-    padding-top: 70px;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+    padding: 70px 0px 0px 0px;
 }
-.container-business > img {
+.container-business > .intro-img {
     width: 100%;
+    height: 350px;
+}
+.container-business > .intro-img-breathing {
+    background: url('/src/asset/img/ppt/business-breathing-bg.jpg') no-repeat center 62%/cover;
+}
+.container-business > .intro-img-walden {
+    background: url('/src/asset/img/ppt/business-walden-bg.jpg') no-repeat center/cover;
+}
+.container-business > .content {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 50px;
+}
+.container-business > .content > .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+.container-business > .content > .item > .title-container {
+    display: flex;
+    gap: 20px;
+}
+.container-business > .content > .item > .title-container > .title {
+    width: fit-content;
+    padding: 12px 30px;
+    border-radius: 50px;
+    background-color: #eeeeee;
+    font-family: 'Pretendard-SB';
+    font-size: 24px;
+    cursor: pointer;
+}
+.container-business > .content > .item > .title-container > .title:hover {
+    background: linear-gradient(45deg,rgb(150, 205, 227) 0%, rgb(158, 225, 184) 30%, rgb(255, 243, 134) 100%);
+}
+.container-business > .content > .item > .title-container > .active {
+    width: fit-content;
+    padding: 12px 30px;
+    border-radius: 50px;
+    background: linear-gradient(45deg,rgb(150, 205, 227) 0%, rgb(158, 225, 184) 30%, rgb(255, 243, 134) 100%);
+    font-family: 'Pretendard-SB';
+    font-size: 24px;
+}
+.container-business > .content > .item > .img-container {
+    display: block;
+}
+.container-business > .content > .item > .img-container > img {
+    width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .container-business > .intro-img {
+        height: 250px;
+    }
+    .container-business > .content {
+        padding: 20px 0px;
+        gap: 40px;
+    }
+    .container-business > .content {
+        padding: 30px;
+    }
+    .container-business > .content > .item {
+        gap: 14px;
+    }
+    .container-business > .content > .item > .title-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    .container-business > .content > .item > .title-container > .title {
+        font-size: 20px;
+        padding: 10px 24px;
+    }
+}
+@media screen and (max-width: 540px) {
+    .container-business {
+        padding: 60px 0px 0px 0px;
+    }
+    .container-business > .intro-img {
+        height: 200px;
+    }
+    .container-business > .content {
+        padding: 30px 10px;
+    }
+    .container-business > .content > .item > .img-container {
+        height: 220vw;
+    }
+    .container-business > .content > .item > .title-container > .title {
+        font-size: 18px;
+    }
 }
